                       User-Visible DocKnot Changes

DocKnot 1.05 (unreleased)

    Add the Travis-CI badge to README.md and a link to Travis-CI to the
    thread development links if the vcs.travis key is set in
    metadata.json.

DocKnot 1.04 (2018-03-24)

    Fix SPDX test failure on Windows.

DocKnot 1.03 (2018-03-17)

    Add support for a new metadata file, support/extra, that includes
    information that should be added into the middle of the normal SUPPORT
    section of README and README.md files.

    Add a paragraph to the license section of README and README.md saying
    that SPDX license identifiers are in use and providing a pointer to
    the SPDX license list.

    Add SPDX-License-Identifier headers to all substantial source files,
    and add a test to check for them.

DocKnot 1.02 (2017-12-31)

    Support quoted paragraphs (each line starting with ">") and turn them
    into indentation when turning markup into plain text.

    Support numbered lists when converting to thread.

    Force long, unbreakable lines to be left intact when wrapping.

    When wrapping paragraphs, preserve two spaces after periods even when
    the period comes before a closing parenthesis or quote mark.

    Support test/prefix metadata, which replaces the introduction to the
    test instructions.

    Add new license text BSD-3-clause-or-GPL-1+ to support pam-krb5.
    Support markdown formatting in license texts when converting to
    thread to handle the numbered clauses.

    Support more complex quote attributions in thread output, and
    automatically add \cite[] around work names if they don't contain
    double quotes.

    Add security advisory support to the thread template.

DocKnot 1.01 (2016-12-25)

    Add build and test instructions for Autoconf packages, including
    details about Kerberos configuration, to the README and README.md
    templates.  Allow a testing section in the metadata to override the