@@ -2,9 +2,6 @@ language: perl
 perl:
   - "5.26"
   - "5.24"
-  - "5.22"
-  - "5.20"
-  - "5.18"
 
 env: AUTHOR_TESTING=1
 before_install:
@@ -21,7 +18,3 @@ before_install:
 # Fails with 5.22, 5.20, 5.12, 5.10
 #  - cpanm Test::Perl::Critic
 #  - cpanm Test::MinimumVersion
-
-branches:
-  only:
-    - master
