@@ -2,7 +2,7 @@
 #
 # Build script for the docknot application.
 #
-# Copyright 2013, 2016 Russ Allbery <rra@cpan.org>
+# Copyright 2013, 2016, 2018 Russ Allbery <rra@cpan.org>
 #
 # Permission is hereby granted, free of charge, to any person obtaining a
 # copy of this software and associated documentation files (the "Software"),
@@ -24,7 +24,7 @@
 #
 # SPDX-License-Identifier: MIT
 
-use 5.018;
+use 5.024;
 use autodie;
 use warnings;
 
@@ -68,7 +68,7 @@ my $build = Module::Build->new(
         'JSON'           => 0,
         'Perl6::Slurp'   => 0,
         'Template'       => 0,
-        perl             => '5.018',
+        perl             => '5.024',
     },
 );
 
