@@ -8,7 +8,7 @@
 #
 # SPDX-License-Identifier: MIT
 
-use 5.018;
+use 5.024;
 use autodie;
 use warnings;
 
@@ -107,7 +107,7 @@ Russ Allbery <rra@cpan.org>
 
 =head1 COPYRIGHT AND LICENSE
 
-Copyright 2016 Russ Allbery <rra@cpan.org>
+Copyright 2016, 2018 Russ Allbery <rra@cpan.org>
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
