@@ -94,7 +94,7 @@ web publishing framework, time permitting.
 
 \h2[Requirements]
 
-Perl 5.18 or later and Module::Build are required to build this module.
+Perl 5.24 or later and Module::Build are required to build this module.
 The following additional Perl modules are required to use it:
 
 \bullet(packed)[File::BaseDir]
