@@ -8,7 +8,7 @@ $COVERAGE_LEVEL = 90;
 @COVERAGE_SKIP_TESTS = qw(examples);
 
 # Default minimum version requirement.
-$MINIMUM_VERSION = '5.018';
+$MINIMUM_VERSION = '5.024';
 
 # Additional regexes that match methods that should be considered private and
 # therefore don't have to be documented in POD coverage.
